# bitmap_index_extension_4_duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: CMakeLists.txt  bitmap_idx_extension.cpp
src/include/: bitmap_idx_extension.hpp
src/index/: CMakeLists.txt  bitmap_idx.cpp  bitmap_idx.hpp  bitmap_idx_create_logical.cpp  bitmap_idx_create_logical.hpp  bitmap_idx_create_physical.cpp  bitmap_idx_create_physical.hpp  bitmap_idx_module.hpp  bitmap_idx_plan_scan.cpp  bitmap_idx_pragmas.cpp  bitmap_idx_scan.cpp  bitmap_idx_scan.hpp  bitmap_idx_table.cpp  bitmap_idx_table.hpp
test/: benchmark-tpch.sh
test/sql/: bitmap_idx.test  bitmap_idx_create.test  bitmap_idx_extended.test
